[package]
name = "tdrs"
authors = ["nerd"]
license = "MIT"
description = "A simple command line task manager"
homepage = "https://github.com/nobel-von-it/tdr.git"
repository = "https://github.com/nobel-von-it/tdr.git"
readme = "README.md"
categories = ["command-line-utilities"]
version = "0.1.5"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive"] }
crossterm = "0.28.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
whoami = "1.5.1"
